clusters/home/dex/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dex
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
