clusters/home/dex/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
spec:
  gateways:
  - istio-gateways/mtaylor-io
  hosts:
  - login.mtaylor.io
  http:
  - route:
    - destination:
        host: dex.dex.svc.cluster.local
        port:
          number: 80
